# acts

./: .gitignore  .gitlab-ci.yml  README.md  alice3_full_chain.py  alice3_lut_chain.py  alice3_reco_chain.py  alice3_sim_chain.py  setup.sh
.github/workflows/: geo_build_materialmap.yml  run_test.yml
ALICE/: README.md
ActsAlgorithms/: CMakeLists.txt
ActsAlgorithms/ExampleAlgorithms/: CMakeLists.txt
ActsAlgorithms/ExampleAlgorithms/include/: ExampleAlgorithm.hpp  FlatLutEntry.h  HitRemoverAlgorithm.hpp  LutMaker.hpp  TrackMergerAlgorithm.hpp  TrackTruthMatcher.hpp
ActsAlgorithms/ExampleAlgorithms/src/: ExampleAlgorithm.cpp  HitRemoverAlgorithm.cpp  LutMaker.cpp  TrackMergerAlgorithm.cpp  TrackTruthMatcher.cpp
ActsAlgorithms/Validation/include/: ResPlotTool.hpp  RootTrackFitterPerformanceWriter.hpp
ActsAlgorithms/Validation/src/: ResPlotTool.cpp  RootTrackFitterPerformanceWriter.cpp
ActsAlgorithms/python/: CMakeLists.txt
ActsAlgorithms/python/src/: AliceActsAlgorithmsModule.cpp  ExampleAlgorithmBindings.hpp
Core/include/Acts/Definitions/: PdgParticle.hpp
Core/src/Definitions/: ParticleData.cpp
Examples/Python/: setup.sh.in
Examples/Python/src/: Base.cpp
Examples/Scripts/MaterialMapping/: GeometryVisualisationAndMaterialHandling.py  Mat_map.C  Mat_map_detector_plot.C  Mat_map_surface_plot.C  Mat_map_surface_plot_1D.C  Mat_map_surface_plot_dist.C  materialPlotHelper.hpp
Fatras/: CMakeLists.txt
Fatras/src/Kernel/: SimulationActor.cpp
Python/Core/src/: CoreModuleEntry.cpp
alice3/performance/: plotting.py  seeding.py  writers.py
geometries/: README.md
geometries/geometry_2026_02_12_default_v3_cylindrical_barrel_tiled_disks/: README.md
geometries/geometry_2026_02_23_MarcoVL_peacock_iriscylinder_or_segmented/geom/: buildALICE3Geometry.py  o2sim_geometry.root
geometries/geometry_2026_03_13_peacock_segmented_iTof/digiConfigurations/: digi-segm_config_with_TOFs_TunedBinning.json
geometries/geometry_2026_03_13_peacock_segmented_iTof/geom/: buildALICE3Geometry.py
geometries/geometry_2026_03_13_peacock_segmented_iTof/seedingConfigurations/: geoSelectionForSeeding_VD_ML.json
geometries/geometry_2026_03_28_segmented/geom/: buildALICE3Geometry.py  o2_command.txt
geometries/geometry_2026_03_28_simple/geom/: buildALICE3Geometry.py  o2command.txt
job_configs/: ChainConfig.py  ChainConfig_default.py
(+77 files in other folders)
